--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
     <title>Кото кафе-мяу</title>
     <body style="background-color:#FFF8DC">
         <header style="background-color:#FFDEAD">
-            <a href="#cafe" style="color:#8B4513; margin-right: 25px">Про кафе</a>        
-            <a href="#pravil" style="color:#8B4513; margin-right: 25px">Правила поведения</a>
-            <a href="#cena" style="color:#8B4513; margin-right: 25px">Цены</a>
-            <a href="#do" style="color:#8B4513">Ваши возможности</a>
+            <a href="#cafe" style="color:#8B4513; margin-right: 40px">Про кафе</a>        
+            <a href="#pravil" style="color:#8B4513; margin-right: 40px">Правила поведения</a>
+            <a href="#cena" style="color:#8B4513; margin-right: 40px">Цены</a>
+            <a href="#do" style="color:#8B4513; margin-right: 40px">Ваши возможности</a>
         </header>
         <main>
             <h1 style="text-align:center;font-size: 50px;color:#CD853F">Кото Кафе-Мяу </br>Приветствует вас!</h1>
